- Fixed more of Authentication Implementation which shows the weakest part of feathersJS both in code and docs - Fixed client side routines for authentication (to be continued)

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -672,6 +672,7 @@ button {
     display: block;
     margin: 0 auto;
     max-width: 100%;
+    min-width:600px;
     /*  margin-bottom: 30px;*/
     /* -webkit-filter: grayscale(100%);
      filter: grayscale(100%);*/
