--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -1,5 +1,5 @@
 <div class="main-container">
-  <div style="display:none" id="secret" username="<%=username%>" token="<%=accesstoken%>"></div>
+  <div style="display:none" id="secret" username="<%=username%>"></div>
   <div id="alert-container" style="position:absolute;top:100px;right:0"></div>
   <div class="container">
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
