--- a/src/views/pages/dashboards-engagement.ejs
+++ b/src/views/pages/dashboards-engagement.ejs
@@ -4,7 +4,7 @@
   <%- include ../layouts/layout-header.ejs %>
 </head>
 <body>
-<div style="display:none" id="secret" username="<%=username%>" token="<%=accesstoken%>"></div>
+<div style="display:none" id="secret" username="<%=username%>"></div>
 <!--<button class="instabtn" onclick="openNav('social-sidepanel')">&#9776; Instagram</button>-->
 <div id="alert-container" style="position:absolute;top:100px;right:0"></div>
 <div class="container">
