--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -4,7 +4,7 @@
   <%- include ../layouts/layout-header.ejs %>
 </head>
 <body>
-<div style="display:none" id="secret" username="<%=username%>" token="<%=accesstoken%>"></div>
+<div style="display:none" id="secret" username="<%=username%>"></div>
 <div id="alert-container" style="position:absolute;top:100px;right:0"></div>
 <div class="container" id="stats-container" >
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
