--- a/src/views/layouts/layout-header.ejs
+++ b/src/views/layouts/layout-header.ejs
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="manifest" href="manifest.json" />
+<!--<link rel="manifest" href="manifest.json" />-->
 
 <title>Socialytics</title>
 <%- include ../layouts/layout-stylesheets.ejs %>
