--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -68,8 +68,8 @@
       <div class="widget-title">
         Top 10 Brands
       </div>
-      <div class="widget-stage">
-        <img data-src="holder.js/100px120?theme=white">
+      <div style="min-width: 100px;min-height:200px;" id="stats-hbar-b" class="widget-stage">
+
       </div>
       <div class="widget-notes">
         Horizontal bar chart of top 10 brands overall engagement
