- Implemented SSL with self signed certificate for one year

--- a/src/views/layouts/layout-home.ejs
+++ b/src/views/layouts/layout-home.ejs
@@ -8,5 +8,6 @@
 <%- include ../pages/sidepanel.ejs %>
 
 <%- include ../layouts/layout-footer.ejs %>
+<script src="/js/socket-prepare.js"></script>
 </body>
 </html>
