--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -180,7 +180,9 @@
 </div>
 <%- include ../pages/sidepanel-dashboards.ejs %>
 <%- include ../layouts/layout-footer.ejs %>
+<script src="/js/socket-prepare.js"></script>
 <script type="text/javascript" src="/js/stats-client.js"> </script>
+
 <script>
   getEndpointData('/instagram/sets/data?', 'form-data', '', 'main', undefined);
   $("#noDataMsg").remove();
