- Finalizing authentication for now (needs more tests)

--- a/src/views/layouts/layouts-javascripts.ejs
+++ b/src/views/layouts/layouts-javascripts.ejs
@@ -10,6 +10,9 @@
 <script src="/js/server-notification-client.js"></script>
 
 
-<script src="/js/client.js"></script>
+
+<script src="/js/socket-prepare.js"></script>
 <script src="/js/server-data-client.js"></script>
+<script src="/js/client.js"></script>
+<script src="/js/stats-client.js"> </script>
 <script src="/js/render-client.js"></script>
