--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -44,6 +44,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav('sidepanel-login')">&times;</a>
 
 </div>
-<%- include ../layouts/layout-footer.ejs %>
+<script src="/js/globals.js"></script>
+<script src="/js/client.js"></script>
 </body>
 </html>
