--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -3,7 +3,7 @@
 <head>
   <%- include ../layouts/layout-header.ejs %>
 </head>
-<body>
+<body class="dashboard-body">
 <div style="display:none" id="secret" username="<%=username%>"></div>
 <div id="alert-container" style="position:absolute;top:100px;right:0"></div>
 <div class="container" id="stats-container" >
@@ -44,74 +44,74 @@
   <div class="dash-container grid grid-split-columns">
     <div class="widget-wrapper">
       <div class="widget-title">
-        Top 10 Brands
+        Profiles A
       </div>
       <div style="min-width: 100px;min-height:200px;" id="stats-hbar-a" class="widget-stage">
-
-      </div>
-      <div class="widget-notes">
-        Horizontal bar chart of top 10 brands overall engagement
-      </div>
-    </div>
-    <div class="widget-wrapper">
-      <div class="widget-title">
-        Top 10 brands metrics
-      </div>
-      <div class="widget-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Top 10 brands posts, likes, comments, followers and following counters
+        Profiles overall engagement
       </div>
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Top 10 Brands
+        Profiles metrics A
+      </div>
+      <div id="profiles-counters-a" class="widget-stage counters-stage">
+        <img data-src="holder.js/100px120?theme=white">
+      </div>
+      <div class="widget-notes">
+        Profiles posts, likes, comments, followers and following counters
+      </div>
+    </div>
+    <div class="widget-wrapper">
+      <div class="widget-title">
+        Profiles B
       </div>
       <div style="min-width: 100px;min-height:200px;" id="stats-hbar-b" class="widget-stage">
-
-      </div>
-      <div class="widget-notes">
-        Horizontal bar chart of top 10 brands overall engagement
-      </div>
-    </div>
-    <div class="widget-wrapper">
-      <div class="widget-title">
-        Top 10 brands metrics
-      </div>
-      <div class="widget-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Top 10 brands posts, likes, comments, followers and following counters
+        Profiles overall engagement
+      </div>
+    </div>
+    <div class="widget-wrapper">
+      <div  class="widget-title">
+        Profiles metrics B
+      </div>
+      <div id="profiles-counters-b" class="widget-stage counters-stage">
+        <img data-src="holder.js/100px120?theme=white">
+      </div>
+      <div class="widget-notes">
+        Profiles posts, likes, comments, followers and following counters
       </div>
     </div>
     <div class="grid-split">
       <div class="widget-wrapper">
         <div class="widget-title">
-          Top brands trends
+          Profiles trends
         </div>
         <div class="widget-stage">
           <img data-src="holder.js/100px120?theme=white">
         </div>
         <div class="widget-notes">
-          Likes, comments, engagement and sentiment trends
+          Profiles likes, comments, engagement and sentiment trends
         </div>
       </div>
       <div class="widget-wrapper">
         <div class="widget-title">
-          Top brands trends
+          Profiles trends
         </div>
         <div class="widget-stage">
           <img data-src="holder.js/100px120?theme=white">
         </div>
         <div class="widget-notes">
-          Likes, comments, engagement and sentiment trends
+          Profiles likes, comments, engagement and sentiment trends
         </div>
       </div>
       <div class="widget-wrapper">
         <div class="widget-title">
-          Top brands pie charts
+          Profiles pie charts
         </div>
         <div class="widget-stage">
           <img data-src="holder.js/100px120?theme=white">
@@ -122,7 +122,7 @@
       </div>
       <div class="widget-wrapper">
         <div class="widget-title">
-          Top brands pie charts
+          Profiles pie charts
         </div>
         <div class="widget-stage">
           <img data-src="holder.js/100px120?theme=white">
@@ -134,46 +134,46 @@
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Top brands maps
+        Profiles maps
       </div>
       <div class="widget-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Geographical location maps for top brands posts, fans and engagements
+        Geographical location maps for  profiles posts, fans and engagements
       </div>
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Top brands timelines
+        Profiles timelines
       </div>
       <div class="widget-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Top brands timeline of posts and engagements
+        Profiles timeline of posts and engagements
       </div>
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Top brands maps
+        Profiles maps
       </div>
       <div class="widget-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Geographical location maps for top brands posts, fans and engagements
+        Geographical location maps for profiles posts, fans and engagements
       </div>
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Top brands timelines
+        Profiles timelines
       </div>
       <div class="widget-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Top brands timeline of posts and engagements
+        Profiles timeline of posts and engagements
       </div>
     </div>
   </div>
