--- a/public/css/style.css
+++ b/public/css/style.css
@@ -227,7 +227,15 @@ a:focus {
   display: inline-block;
   vertical-align: top;
 }
-
+.mini-loader {
+  margin: 0.1em;
+  height: 40%;
+  width: 40%;
+  text-align: center;
+  padding: 0.1em;
+  display: inline-block;
+  vertical-align: middle;
+}
 /*
   Set the color of the icon
 */
