--- a/src/views/pages/sidepanel-dashboards.ejs
+++ b/src/views/pages/sidepanel-dashboards.ejs
@@ -7,6 +7,8 @@
     <textarea style="display:block; padding:5px; margin:10px; width:95%;min-height:200px" id="setb" class="setb"></textarea>
     <input style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Reset filters" type="button" class="btn btn-primary" click-target="/instagram/sets/data?" call-type="form-data">
     <input id="getDataBtn" style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Get research sets data" type="button" class="btn btn-primary" call-type="form-data">
-    <div id="counter" class="loader loader--style1" title="0"></div>
+    <input id="getData2Btn" style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Get research sets data" type="button" class="btn btn-primary" call-type="form-data">
+    <div id="countera" class="stats-totals" title="0"></div>
+    <div id="counterb" class="stats-totals" title="0"></div>
   </div>
 </div>
