--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -50,7 +50,7 @@
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Profiles overall engagement
+        Profiles overall metrics
       </div>
     </div>
     <div class="widget-wrapper">
