- Separated setA and setB statistical ops

--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -10,7 +10,7 @@
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <img class="github" id="github" alt="Houman Hadian's project research tool on Github" src="/img/svg/github-corner-right.svg">
     <div class="navbar-header">
-      <button class="instabtn" onclick="openNav('dashboard-sidepanel')">&#9776;</button>
+      <button class="instabtn" onclick="openNav('dashboard-sidepanel', '450px')">&#9776;</button>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -46,74 +46,74 @@
       <div class="widget-title">
         Profiles A
       </div>
-      <div style="min-width: 100px;min-height:200px;" id="stats-hbar-a" class="widget-stage">
+      <div style="min-width: 100px;min-height:200px;" id="stats-hbar-a" class="widget-stage classa">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Profiles overall metrics
+        Profiles overall metrics A
       </div>
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
         Profiles metrics A
       </div>
-      <div id="profiles-counters-a" class="widget-stage counters-stage">
+      <div id="profiles-counters-a" class="widget-stage classa counters-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Profiles posts, likes, comments, followers and following counters
+        Profiles posts, likes, comments, followers and following counters A
       </div>
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
         Profiles B
       </div>
-      <div style="min-width: 100px;min-height:200px;" id="stats-hbar-b" class="widget-stage">
+      <div style="min-width: 100px;min-height:200px;" id="stats-hbar-b" class="widget-stage classb">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Profiles overall engagement
+        Profiles overall metrics B
       </div>
     </div>
     <div class="widget-wrapper">
       <div  class="widget-title">
         Profiles metrics B
       </div>
-      <div id="profiles-counters-b" class="widget-stage counters-stage">
+      <div id="profiles-counters-b" class="widget-stage classb counters-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Profiles posts, likes, comments, followers and following counters
+        Profiles posts, likes, comments, followers and following counters B
       </div>
     </div>
     <div class="grid-split">
       <div class="widget-wrapper">
         <div class="widget-title">
-          Profiles trends
+          Profiles trends A
         </div>
-        <div class="widget-stage">
+        <div class="widget-stage classa">
           <img data-src="holder.js/100px120?theme=white">
         </div>
         <div class="widget-notes">
-          Profiles likes, comments, engagement and sentiment trends
+          Profiles likes, comments, engagement and sentiment trends A
         </div>
       </div>
       <div class="widget-wrapper">
         <div class="widget-title">
-          Profiles trends
+          Profiles trends B
         </div>
-        <div class="widget-stage">
+        <div class="widget-stage classb">
           <img data-src="holder.js/100px120?theme=white">
         </div>
         <div class="widget-notes">
-          Profiles likes, comments, engagement and sentiment trends
+          Profiles likes, comments, engagement and sentiment trends B
         </div>
       </div>
       <div class="widget-wrapper">
         <div class="widget-title">
-          Profiles pie charts
+          Profiles pie charts A
         </div>
-        <div class="widget-stage">
+        <div class="widget-stage classa">
           <img data-src="holder.js/100px120?theme=white">
         </div>
         <div class="widget-notes">
@@ -122,9 +122,9 @@
       </div>
       <div class="widget-wrapper">
         <div class="widget-title">
-          Profiles pie charts
+          Profiles pie charts B
         </div>
-        <div class="widget-stage">
+        <div class="widget-stage classb">
           <img data-src="holder.js/100px120?theme=white">
         </div>
         <div class="widget-notes">
@@ -134,46 +134,46 @@
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Profiles maps
+        Profiles maps A
       </div>
-      <div class="widget-stage">
+      <div class="widget-stage classa">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Geographical location maps for  profiles posts, fans and engagements
+        Geographical location maps for  profiles posts, fans and engagements A
       </div>
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Profiles timelines
+        Profiles timelines A
       </div>
-      <div class="widget-stage">
+      <div class="widget-stage classa">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Profiles timeline of posts and engagements
+        Profiles timeline of posts and engagements A
       </div>
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Profiles maps
+        Profiles maps B
       </div>
-      <div class="widget-stage">
+      <div class="widget-stage classb">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Geographical location maps for profiles posts, fans and engagements
+        Geographical location maps for profiles posts, fans and engagements B
       </div>
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Profiles timelines
+        Profiles timelines B
       </div>
-      <div class="widget-stage">
+      <div class="widget-stage classb">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Profiles timeline of posts and engagements
+        Profiles timeline of posts and engagements B
       </div>
     </div>
   </div>
