--- a/src/views/pages/sidepanel-dashboards.ejs
+++ b/src/views/pages/sidepanel-dashboards.ejs
@@ -1,4 +1,4 @@
-<div class="sidepanel" id="dashboard-sidepanel">
+<div style="background-color: #454343;opacity:0.96" class="sidepanel" id="dashboard-sidepanel">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav('dashboard-sidepanel')">&times;</a>
   <a href="javascript:void(0)" value="" style="display:none" id="backbtn" class="backbtn" onclick="backNav()">&#8406</a>
   <div id="dashboard-container">
