--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -91,7 +91,7 @@
         <div class="widget-title">
           Profiles trends A
         </div>
-        <div class="widget-stage classa">
+        <div id="lines-seta" class="widget-stage classa">
           <img data-src="holder.js/100px120?theme=white">
         </div>
         <div class="widget-notes">
@@ -102,7 +102,7 @@
         <div class="widget-title">
           Profiles trends B
         </div>
-        <div class="widget-stage classb">
+        <div id="lines-setb" class="widget-stage classb">
           <img data-src="holder.js/100px120?theme=white">
         </div>
         <div class="widget-notes">
