- Implemented pie charts and line charts for dashboards-stats (needs clean up)

--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -113,7 +113,7 @@
         <div class="widget-title">
           Profiles pie charts A
         </div>
-        <div class="widget-stage classa">
+        <div id="pie-seta" class="widget-stage classa">
           <img data-src="holder.js/100px120?theme=white">
         </div>
         <div class="widget-notes">
