--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -113,8 +113,32 @@
         <div class="widget-title">
           Profiles pie charts A
         </div>
-        <div id="pie-seta" class="widget-stage classa">
-          <img data-src="holder.js/100px120?theme=white">
+        <div id="pie-seta" class="widget-stage tabs">
+          <!-- Nav tabs -->
+          <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a class="nav-link active" data-toggle="tab" href="#DoMA">DoM</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#DoWA">DoW</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#HoDA">HoD</a>
+            </li>
+          </ul>
+
+          <!-- Tab panes -->
+          <div class="tab-content">
+            <div class="tab-pane active container widget-stage classa" id="DoMA">
+              <img data-src="holder.js/100px120?theme=white">
+            </div>
+            <div class="tab-pane container widget-stage classa" id="DoWA">
+              <img data-src="holder.js/100px120?theme=white">
+            </div>
+            <div class="tab-pane container widget-stage classa" id="HoDA">
+              <img data-src="holder.js/100px120?theme=white">
+            </div>
+          </div>
         </div>
         <div class="widget-notes">
           language, DoW, DoM, HoD, Locations , tags, verification, image types, image colors, image entities pie charts
