- Implemented line and pie charts for all data sets in stats dashboard

--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -113,9 +113,9 @@
         <div class="widget-title">
           Profiles pie charts A
         </div>
-        <div id="pie-seta" class="widget-stage tabs">
+        <div  style="max-width:45vw" id="pie-seta" class="widget-stage tabs">
           <!-- Nav tabs -->
-          <ul class="nav nav-tabs">
+          <ul style="max-width:45vw" class="nav nav-tabs">
             <li class="nav-item">
               <a class="nav-link active" data-toggle="tab" href="#DoMA">DoM</a>
             </li>
@@ -128,15 +128,15 @@
           </ul>
 
           <!-- Tab panes -->
-          <div class="tab-content">
-            <div class="tab-pane active container widget-stage classa" id="DoMA">
-              <img data-src="holder.js/100px120?theme=white">
+          <div style="max-width:45vw" class="tab-content">
+            <div style="max-width:45vw" class="tab-pane active container widget-stage classa" id="DoMA">
+              <img data-src="holder.js/78px120?theme=white">
             </div>
-            <div class="tab-pane container widget-stage classa" id="DoWA">
-              <img data-src="holder.js/100px120?theme=white">
+            <div style="max-width:45vw" class="tab-pane container widget-stage classa" id="DoWA">
+              <img data-src="holder.js/78px120?theme=white">
             </div>
-            <div class="tab-pane container widget-stage classa" id="HoDA">
-              <img data-src="holder.js/100px120?theme=white">
+            <div style="max-width:45vw" class="tab-pane container widget-stage classa" id="HoDA">
+              <img data-src="holder.js/78px120?theme=white">
             </div>
           </div>
         </div>
@@ -148,8 +148,32 @@
         <div class="widget-title">
           Profiles pie charts B
         </div>
-        <div class="widget-stage classb">
-          <img data-src="holder.js/100px120?theme=white">
+        <div style="max-width:45vw" id="pie-setb" class="widget-stage tabs">
+          <!-- Nav tabs -->
+          <ul style="max-width:45vw" class="nav nav-tabs">
+            <li class="nav-item">
+              <a class="nav-link active" data-toggle="tab" href="#DoMB">DoM</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#DoWB">DoW</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#HoDB">HoD</a>
+            </li>
+          </ul>
+
+          <!-- Tab panes -->
+          <div style="max-width:45vw" class="tab-content">
+            <div style="max-width:45vw" class="tab-pane active container widget-stage classb" id="DoMB">
+              <img data-src="holder.js/78px120?theme=white">
+            </div>
+            <div style="max-width:45vw" class="tab-pane container widget-stage classb" id="DoWB">
+              <img data-src="holder.js/78px120?theme=white">
+            </div>
+            <div style="max-width:45vw" class="tab-pane container widget-stage classb" id="HoDB">
+              <img data-src="holder.js/78px120?theme=white">
+            </div>
+          </div>
         </div>
         <div class="widget-notes">
           language, DoW, DoM, HoD, Locations , tags, verification, image types, image colors, image entities pie charts
