-Implemented heatmap calendar and fixed some issues

--- a/src/views/layouts/layouts-javascripts-head.ejs
+++ b/src/views/layouts/layouts-javascripts-head.ejs
@@ -4,5 +4,9 @@
 <script type="text/javascript" src="/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/OverlayScrollbars.min.js"></script>
 <script type="text/javascript" src="/js/echarts.min.js"></script>
+<script type="text/javascript" src="/js/geo/world.js"></script>
+<script type="text/javascript" src="/js/geo/portugal.js"></script>
+<script type="text/javascript" src="/js/geo/iran.js"></script>
+
 
 
