--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -111,6 +111,28 @@
       </div>
       <div class="widget-wrapper">
         <div class="widget-title">
+          Set A Heatmap calendar
+        </div>
+        <div id="heatA" class="widget-stage classa">
+          <img data-src="holder.js/100px120?theme=white">
+        </div>
+        <div class="widget-notes">
+          Set A profiles calendar heatmap
+        </div>
+      </div>
+      <div class="widget-wrapper">
+        <div class="widget-title">
+          Set B Heatmap calendar
+        </div>
+        <div id="heatB" class="widget-stage classb">
+          <img data-src="holder.js/100px120?theme=white">
+        </div>
+        <div class="widget-notes">
+          Set B profiles calendar heatmap
+        </div>
+      </div>
+      <div class="widget-wrapper">
+        <div class="widget-title">
           Profiles pie charts A
         </div>
         <div  style="max-width:45vw" id="pie-seta" class="widget-stage tabs">
@@ -144,6 +166,7 @@
           language, DoW, DoM, HoD, Locations , tags, verification, image types, image colors, image entities pie charts
         </div>
       </div>
+
       <div class="widget-wrapper">
         <div class="widget-title">
           Profiles pie charts B
@@ -193,13 +216,13 @@
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Profiles timelines A
+        Set A timeline
       </div>
       <div class="widget-stage classa">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Profiles timeline of posts and engagements A
+        Set A timeline
       </div>
     </div>
     <div class="widget-wrapper">
@@ -215,13 +238,13 @@
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Profiles timelines B
+        Set B timeline
       </div>
-      <div class="widget-stage classb">
+      <div id="heatB" class="widget-stage classb">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Profiles timeline of posts and engagements B
+        Set B profiles timeline
       </div>
     </div>
   </div>
