--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -51,7 +51,7 @@
             <input style="margin-bottom:25px;" value="Get sample data" type="button" class="btn btn-primary" click-target="/instagram/form/data?" call-type="form-data">
           </form>
           <div style=" text-align:center" class="footer">
-            <p class="small text-muted">Built with &#9829; for <a href="houmanhadian.github.io">Houman Hadian's doctoral project @ UAlg</a></p>
+            <p class="small text-muted">Built with &#9829; for <a href="https://houmanhadian.github.io/">Houman Hadian's doctoral project @ UAlg</a></p>
           </div>
         </div>
         <!--<div class="widget-notes">
