- Fixed all links and hyperlinks to work in all times and hosts

--- a/src/views/pages/dashboards-explore.ejs
+++ b/src/views/pages/dashboards-explore.ejs
@@ -29,7 +29,7 @@
           <use xlink:href="#a" />
         </svg>
       </a>
-      <a class="navbar-brand" href="#">Socialytics &raquo; Explore</a>
+      <a class="navbar-brand" href="/home?username=<%=username%>">Socialytics &raquo; Explore</a>
     </div>
     <div class="navbar-collapse">
       <ul class="navbar-nav nav main-nav">
