--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -28,7 +28,7 @@
           <use xlink:href="#a" />
         </svg>
       </a>
-      <a class="navbar-brand" href="#">Socialytics &raquo; stats</a>
+      <a class="navbar-brand" href="/home?username=<%=username%>">Socialytics &raquo; stats</a>
     </div>
     <div class="navbar-collapse">
       <ul class="navbar-nav nav main-nav">
