--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -61,7 +61,21 @@
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Profiles posts, likes, comments, followers and following counters A
+        <div class="metrics-legend posts-legend classa">
+          <span class="fa fa-instagram"></span>
+        </div>
+        <div class="metrics-legend followers-legend classa">
+          <span class="fa fa-users"></span>
+        </div>
+        <div class="metrics-legend following-legend classa">
+          <span class="fa fa-user-o"></span>
+        </div>
+        <div class="metrics-legend likes-legend classa">
+          <span class="fa fa-heart-o"></span>
+        </div>
+        <div class="metrics-legend comments-legend classa">
+          <span class="fa fa-comments-o"></span>
+        </div>
       </div>
     </div>
     <div class="widget-wrapper">
@@ -83,7 +97,21 @@
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes">
-        Profiles posts, likes, comments, followers and following counters B
+        <div class="metrics-legend posts-legend classb">
+          <span class="fa fa-instagram"></span>
+        </div>
+        <div class="metrics-legend followers-legend classb">
+          <span class="fa fa-users"></span>
+        </div>
+        <div class="metrics-legend following-legend classb">
+          <span class="fa fa-user-o"></span>
+        </div>
+        <div class="metrics-legend likes-legend classb">
+          <span class="fa fa-heart-o"></span>
+        </div>
+        <div class="metrics-legend comments-legend classb">
+          <span class="fa fa-comments-o"></span>
+        </div>
       </div>
     </div>
     <div class="grid-split">
