--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -60,22 +60,7 @@
       <div id="profiles-counters-a" class="widget-stage classa counters-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
-      <div class="widget-notes">
-        <div class="metrics-legend posts-legend classa">
-          <span class="fa fa-instagram"></span>
-        </div>
-        <div class="metrics-legend followers-legend classa">
-          <span class="fa fa-users"></span>
-        </div>
-        <div class="metrics-legend following-legend classa">
-          <span class="fa fa-user-o"></span>
-        </div>
-        <div class="metrics-legend likes-legend classa">
-          <span class="fa fa-heart-o"></span>
-        </div>
-        <div class="metrics-legend comments-legend classa">
-          <span class="fa fa-comments-o"></span>
-        </div>
+      <div style="margin-left:32px;margin-top:30px;" id="profile-metrics-legend" class="widget-notes">
       </div>
     </div>
     <div class="widget-wrapper">
