- Fixed bar chart and metrics styles in stats dashboard.

--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -53,6 +53,7 @@
         Profiles overall metrics A
       </div>
     </div>
+
     <div class="widget-wrapper">
       <div class="widget-title">
         Profiles metrics A
@@ -60,9 +61,10 @@
       <div id="profiles-counters-a" class="widget-stage classa counters-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
-      <div style="margin-left:32px;margin-top:30px;" id="profile-metrics-legend" class="widget-notes">
+      <div style="margin-left:32px;margin-top:30px;" id="profileA-metrics-legend" class="widget-notes">
       </div>
     </div>
+
     <div class="widget-wrapper">
       <div class="widget-title">
         Profiles B
@@ -74,6 +76,7 @@
         Profiles overall metrics B
       </div>
     </div>
+
     <div class="widget-wrapper">
       <div  class="widget-title">
         Profiles metrics B
@@ -81,22 +84,7 @@
       <div id="profiles-counters-b" class="widget-stage classb counters-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
-      <div class="widget-notes">
-        <div class="metrics-legend posts-legend classb">
-          <span class="fa fa-instagram"></span>
-        </div>
-        <div class="metrics-legend followers-legend classb">
-          <span class="fa fa-users"></span>
-        </div>
-        <div class="metrics-legend following-legend classb">
-          <span class="fa fa-user-o"></span>
-        </div>
-        <div class="metrics-legend likes-legend classb">
-          <span class="fa fa-heart-o"></span>
-        </div>
-        <div class="metrics-legend comments-legend classb">
-          <span class="fa fa-comments-o"></span>
-        </div>
+      <div style="margin-left:32px;margin-top:30px;" id="profileB-metrics-legend" class="widget-notes">
       </div>
     </div>
     <div class="grid-split">
