--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -880,3 +880,36 @@ button {
 .comments-legend{
   background-color:#749f83;
 }
+div.tagsinput{
+   border: none;
+  background: #676565;
+  padding: 5px;
+  width: 300px;
+  height: 100px;
+  overflow-y: auto;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px;
+}
+div.tagsinput span.tag a {
+  font-weight: 700;
+  color: #42443f;
+  text-decoration: none;
+  font-size: 14px;
+  display: inline;
+}
+div.tagsinput span.tag{
+  border: 1px solid #000000;
+  -moz-border-radius: 2px;
+  border-radius: 5px;
+  display: block;
+  float: left;
+  padding: 5px;
+  text-decoration: none;
+  background: rgba(246, 242, 171, 0.8);
+  color: #000000;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  font-family: helvetica;
+  font-size: 13px;
+}
