-Minor style updates in stats dashboard side panel form buttons

--- a/src/views/pages/sidepanel-dashboards.ejs
+++ b/src/views/pages/sidepanel-dashboards.ejs
@@ -8,9 +8,9 @@
     <div style="overflow-y: scroll;max-height:30vh;margin-bottom:25px" id="autocomplete-results"></div>
     <textarea style="display:block; padding:5px; margin:10px; min-height:200px" id="seta" class="seta" ondrop="drop(event)" ondragover="allowDrop(event)"></textarea>
     <textarea style="display:block; padding:5px; margin:10px; min-height:200px" id="setb" class="setb" ondrop="drop(event)" ondragover="allowDrop(event)"></textarea>
-    <input style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Get default sets" type="button" class="btn btn-primary" click-target="/instagram/sets/data?" call-type="form-data">
-    <input id="resetSets" style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Reset sets" type="button" class="btn btn-primary">
-    <input id="getDataBtn" style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Get research sets data" type="button" class="btn btn-primary" call-type="form-data">
+    <input style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Get default sets" type="button" class="btn btn-secondary" click-target="/instagram/sets/data?" call-type="form-data">
+    <input id="resetSets" style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Reset sets" type="button" class="btn btn-secondary">
+    <input id="getDataBtn" style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Start..." type="button" class="btn btn-primary" call-type="form-data">
 
     <div id="countera" class="stats-totals" title="0"></div>
     <div id="counterb" class="stats-totals" title="0"></div>
