- Updated side panel style in stats dashboard.

--- a/src/views/pages/sidepanel-dashboards.ejs
+++ b/src/views/pages/sidepanel-dashboards.ejs
@@ -12,8 +12,8 @@
     <input id="resetSets" style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Reset sets" type="button" class="btn btn-secondary">
     <input id="getDataBtn" style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Start..." type="button" class="btn btn-primary" call-type="form-data">
 
-    <div id="countera" class="stats-totals" title="0"></div>
-    <div id="counterb" class="stats-totals" title="0"></div>
+    <div id="countera" class="stats-totals"></div>
+    <div id="counterb" class="stats-totals"></div>
   </div>
 </div>
 <!--<input style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Reset filters" type="button" class="btn btn-primary" click-target="/instagram/sets/data?" call-type="form-data">-->
