- Updated static contents in stats dashboard.

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -812,7 +812,7 @@ button {
   display:inline-block;
 }
 .widget-title, .widget-notes{
-  color:#999
+  color:#b4afaf
 }
 .counters-stage{
   width:auto;
