--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -49,9 +49,7 @@
       <div style="min-width: 100px;min-height:200px;" id="stats-hbar-a" class="widget-stage classa">
         <img data-src="holder.js/100px120?theme=white">
       </div>
-      <div class="widget-notes">
-        Profiles overall metrics A
-      </div>
+      <div class="widget-notes"></div>
     </div>
 
     <div class="widget-wrapper">
@@ -72,9 +70,7 @@
       <div style="min-width: 100px;min-height:200px;" id="stats-hbar-b" class="widget-stage classb">
         <img data-src="holder.js/100px120?theme=white">
       </div>
-      <div class="widget-notes">
-        Profiles overall metrics B
-      </div>
+      <div class="widget-notes"></div>
     </div>
 
     <div class="widget-wrapper">
@@ -95,9 +91,7 @@
         <div id="lines-seta" class="widget-stage classa">
           <img data-src="holder.js/100px120?theme=white">
         </div>
-        <div class="widget-notes">
-          Profiles likes, comments, engagement and sentiment trends A
-        </div>
+        <div class="widget-notes"></div>
       </div>
       <div class="widget-wrapper">
         <div class="widget-title">
@@ -106,9 +100,7 @@
         <div id="lines-setb" class="widget-stage classb">
           <img data-src="holder.js/100px120?theme=white">
         </div>
-        <div class="widget-notes">
-          Profiles likes, comments, engagement and sentiment trends B
-        </div>
+        <div class="widget-notes"></div>
       </div>
       <div class="widget-wrapper">
         <div class="widget-title">
@@ -117,9 +109,7 @@
         <div id="heatA" class="widget-stage classa">
           <img data-src="holder.js/100px120?theme=white">
         </div>
-        <div class="widget-notes">
-          Set A profiles calendar heatmap
-        </div>
+        <div class="widget-notes"></div>
       </div>
       <div class="widget-wrapper">
         <div class="widget-title">
@@ -128,9 +118,7 @@
         <div id="heatB" class="widget-stage classb">
           <img data-src="holder.js/100px120?theme=white">
         </div>
-        <div class="widget-notes">
-          Set B profiles calendar heatmap
-        </div>
+        <div class="widget-notes"></div>
       </div>
       <div class="widget-wrapper">
         <div class="widget-title">
@@ -163,9 +151,7 @@
             </div>
           </div>
         </div>
-        <div class="widget-notes">
-          language, DoW, DoM, HoD, Locations , tags, verification, image types, image colors, image entities pie charts
-        </div>
+        <div class="widget-notes"></div>
       </div>
 
       <div class="widget-wrapper">
@@ -199,9 +185,7 @@
             </div>
           </div>
         </div>
-        <div class="widget-notes">
-          language, DoW, DoM, HoD, Locations , tags, verification, image types, image colors, image entities pie charts
-        </div>
+        <div class="widget-notes"></div>
       </div>
     </div>
     <div class="widget-wrapper">
@@ -211,9 +195,7 @@
       <div class="widget-stage classa">
         <img data-src="holder.js/100px120?theme=white">
       </div>
-      <div class="widget-notes">
-        Geographical location maps for  profiles posts, fans and engagements A
-      </div>
+      <div class="widget-notes"></div>
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
@@ -222,9 +204,7 @@
       <div id="total-metrics-a" class="widget-stage classa">
         <img data-src="holder.js/100px120?theme=white">
       </div>
-      <div class="widget-notes">
-        Set A Totals
-      </div>
+      <div class="widget-notes"></div>
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
@@ -233,9 +213,7 @@
       <div class="widget-stage classb">
         <img data-src="holder.js/100px120?theme=white">
       </div>
-      <div class="widget-notes">
-        Geographical location maps for profiles posts, fans and engagements B
-      </div>
+      <div class="widget-notes"></div>
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
@@ -244,9 +222,7 @@
       <div id="total-metrics-b" class="widget-stage classb">
         <img data-src="holder.js/100px120?theme=white">
       </div>
-      <div class="widget-notes">
-        Set B total metrics
-      </div>
+      <div class="widget-notes"></div>
     </div>
   </div>
 </div>
