--- a/src/views/pages/sidepanel.ejs
+++ b/src/views/pages/sidepanel.ejs
@@ -1,6 +1,6 @@
 <div class="sidepanel" id="social-sidepanel">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav('social-sidepanel')">&times;</a>
-  <a href="javascript:void(0)" value="" style="display:none" id="backbtn" class="backbtn" onclick="backNav()">&#8406</a>
+  <a href="javascript:void(0)" value="" style="display:none" id="backbtn" class="fa fa-arrow-left backbtn" onclick="backNav()"></a>
   <div id="instagram-container">
     <div class="loader loader--style1" title="0">
       <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
